--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ development:
   reconnect: true
   database: railspractice
   username: root
-  password: root
+  password:
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
